Add new features

--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <span class="badge">Java Developer • Spring Boot • React</span>
+          <span class="badge">Java Developer </span>
           <h1 class="title">Salut! Sunt <span style="background: linear-gradient(135deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; background-clip:text; color:transparent;">Ion Gondrea</span>.</h1>
-          <p class="subtitle">Masterand pasionat de <strong>Java, Spring Boot, React</strong> și arhitecturi moderne. Îmi place să construiesc aplicații clare, testabile și bine documentate. Mai jos găsești proiectele mele și reușitele de care sunt mândru.</p>
+          <p class="subtitle">Masterand pasionat de <strong>Java</strong> și arhitecturi moderne. Îmi place să construiesc aplicații clare, testabile și bine documentate. Mai jos găsești proiectele mele și reușitele de care sunt mândru.</p>
           <div class="hero-cta">
             <a class="btn" href="#proiecte">Vezi proiectele</a>
             <a class="btn" href="https://github.com/IonGondrea" target="_blank" rel="noreferrer">GitHub</a>
-            <a class="btn" href="mailto:ion.gondrea@example.com">Contactează-mă</a>
+            <a class="btn" href="https://www.linkedin.com/in/gondrea-ion/">Contactează-mă</a>
           </div>
         </div>
         <div class="card">
-          <img class="pfp" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=1200&auto=format&fit=crop" alt="Poză profil (înlocuiește)" />
+            <img class="pfp" src="./assets/ion-gondrea.jpg" alt="Ion Gondrea — poză profil" width="600" height="500" loading="lazy" />
         </div>
       </div>
     </section>
@@ -138,20 +138,45 @@
       <h2>Despre mine</h2>
       <div class="grid grid-2">
         <div class="card">
-          <p>Sunt student masterand la UAB, cu focus pe baze de date și programare avansată. Am experiență cu <strong>Spring Boot</strong>, <strong>REST APIs</strong>, <strong>JPA/Hibernate</strong>, <strong>React</strong>, <strong>Docker</strong> și bune practici de testare.
-          Îmi place să documentez corect serviciile (OpenAPI/Swagger) și să mențin un stil de cod curat.</p>
-          <div class="kpis">
-            <span class="kpi">3+ proiecte full‑stack</span>
-            <span class="kpi">2 ani experiență practică</span>
+            <p>
+                Sunt masterand la Universitatea „1 Decembrie 1918” din Alba Iulia, specializarea
+                <strong>Baze de Date și Programare Avansată</strong>, cu o formare anterioară în
+                <strong>Administrarea Afacerilor</strong>. Această combinație dintre <strong>IT</strong> și
+                <strong>business</strong> mi-a oferit o perspectivă completă asupra modului în care
+                tehnologia sprijină deciziile strategice și procesele organizaționale.
+                <br><br>
+                Sunt pasionat de dezvoltarea backend-ului modern în <strong>Java</strong> și
+                <strong>Spring Boot</strong>, construind aplicații <strong>scalabile, clare și sigure</strong>
+                cu un cod curat și bine documentat. Am experiență în proiectarea de
+                <strong>RESTful APIs</strong>, gestionarea bazelor de date <strong>MySQL/PostgreSQL</strong>,
+                automatizarea migrărilor cu <strong>Flyway</strong> și containerizarea aplicațiilor cu
+                <strong>Docker</strong>.
+                <br><br>
+                Datorită fundalului în business, pot înțelege rapid cerințele de produs,
+                fluxurile operaționale și modul în care soluțiile software pot aduce valoare reală
+                clienților. Mă atrag proiectele unde pot combina <strong>gândirea analitică</strong>
+                cu <strong>abordarea tehnică</strong>, iar pe viitor îmi doresc să contribui la
+                inițiative IT cu impact economic și social pozitiv.
+            </p>
+
+            <div class="kpis">
+                <span class="kpi">Masterand UAB — PABD</span>
+                <span class="kpi">Licențiat în Business Administration</span>
+            </div>
+
+            <div class="kpis">
             <span class="kpi">Hackathoane & certificări</span>
           </div>
         </div>
         <div class="card">
-          <ul>
-            <li><strong>Tehnologii:</strong> Java, Spring Boot, JPA, REST, JWT, Docker, React/TS, PostgreSQL/MySQL</li>
-            <li><strong>Interese:</strong> arhitecturi modulare, documentare tehnică, DevOps light (CI/CD)</li>
-            <li><strong>Actualmente:</strong> construiesc proiectul <em>Tasky</em> și rafinez portofoliul</li>
-          </ul>
+            <ul>
+                <li><strong>Tehnologii:</strong> Java, Spring Boot, REST APIs, JPA/Hibernate, JWT, Docker,  PostgreSQL, MySQL, Flyway</li>
+                <li><strong>Competențe cheie:</strong> proiectare backend scalabilă, documentare tehnică (OpenAPI/Swagger), testare automată (JUnit, Mockito) și versionare Git/GitHub</li>
+                <li><strong>Interese:</strong> arhitecturi modulare, bune practici DevOps (CI/CD cu GitHub Actions), integrare cloud (AWS) și optimizarea performanței aplicațiilor</li>
+                <li><strong>Abordare personală:</strong> combin logica de business, dobândită în urma studiilor de <em>Business Administration</em>, cu expertiza tehnică în dezvoltare software pentru a crea soluții care aduc valoare reală utilizatorilor</li>
+                <li><strong>Actualmente:</strong> am finalizat proiectul <em>Tasky</em> — o aplicație full-stack pentru managementul task-urilor — și lucrez la un nou proiect, despre care voi oferi detalii în curând</li>
+            </ul>
+
         </div>
       </div>
     </section>
@@ -162,7 +187,7 @@
       <div class="grid grid-3">
         <!-- Project card 1 -->
         <article class="card project">
-          <img class="thumb" src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?q=80&w=1200&auto=format&fit=crop" alt="Tasky app preview" />
+          <img class="thumb" src="./assets/task.png" alt="Tasky app preview" />
           <div>
             <h3>Tasky — Task Manager</h3>
             <p>Aplicație full‑stack pentru managementul taskurilor: Spring Boot (API REST), React (UI), Docker Compose, Swagger.</p>
@@ -170,64 +195,71 @@
               <span class="tag">Spring Boot</span>
               <span class="tag">React</span>
               <span class="tag">Docker</span>
-              <span class="tag">PostgreSQL</span>
             </div>
           </div>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn" href="https://github.com/IonGondrea/Tasky" target="_blank" rel="noreferrer">Cod sursă</a>
-            <a class="btn" href="#" aria-disabled="true" onclick="alert('Adaugă link spre demo când îl publici.'); return false;">Demo</a>
           </div>
         </article>
-        <!-- Project card 2 -->
-        <article class="card project">
-          <img class="thumb" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200&auto=format&fit=crop" alt="API docs" />
-          <div>
-            <h3>API Catalog</h3>
-            <p>Micro‑serviciu cu documentație OpenAPI/Swagger, JWT auth și testare automatizată pentru endpointuri critice.</p>
-            <div class="tags">
-              <span class="tag">OpenAPI</span>
-              <span class="tag">JWT</span>
-              <span class="tag">JUnit</span>
-            </div>
-          </div>
-          <div>
-            <a class="btn" href="#">Repo</a>
-          </div>
-        </article>
-        <!-- Project card 3 -->
-        <article class="card project">
-          <img class="thumb" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Dashboard" />
-          <div>
-            <h3>Dev Dashboard</h3>
-            <p>Dashboard personal pentru monitorizarea issue‑urilor și a commiturilor, integrat cu GitHub REST API.</p>
-            <div class="tags">
-              <span class="tag">TypeScript</span>
-              <span class="tag">GitHub API</span>
-              <span class="tag">CI/CD</span>
-            </div>
-          </div>
-          <div>
-            <a class="btn" href="#">Repo</a>
-          </div>
-        </article>
-      </div>
-    </section>
+          <!-- Project card 2 -->
+          <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px;">
+              <img class="thumb" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
+              <div style="position:absolute; text-align:center;">
+                  <h3 style="font-size:1.4rem; margin-bottom:6px;">🚧 În curând</h3>
+                  <p style="color:#9fb0c0;">Un nou proiect backend este în dezvoltare </p>
+              </div>
+          </article>
 
-    <!-- ACHIEVEMENTS -->
-    <section id="reu">
-      <h2>Reușite</h2>
-      <div class="card timeline">
-        <div class="t-item">
-          <strong>2025</strong> — Finalist hackathon universitar & contribuții open‑source la proiecte educaționale.
-        </div>
-        <div class="t-item">
-          <strong>2024</strong> — Certificări: Java Foundations, Spring & REST API Design.
-        </div>
-        <div class="t-item">
-          <strong>2023</strong> — Practică: dezvoltare și documentare API într‑un proiect intern.
-        </div>
-      </div>
-    </section>
+          <!-- Project card 3 -->
+          <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px;">
+              <img class="thumb" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
+              <div style="position:absolute; text-align:center;">
+                  <h3 style="font-size:1.4rem; margin-bottom:6px;">🚀 Coming Soon</h3>
+                  <p style="color:#9fb0c0;">Proiectul este în lucru </p>
+              </div>
+          </article>
+
+
+          <!-- ACHIEVEMENTS -->
+          <!-- ACHIEVEMENTS -->
+          <section id="reu">
+              <h2>Reușite</h2>
+              <div class="grid grid-3">
+
+                  <!-- Curs Java -->
+                  <article class="card project">
+                      <img class="thumb" src="./assets/java-certificat.jpg" alt="Certificat Java Wantsome" />
+                      <div>
+                          <h3>Certificare Java Full-Stack Developer</h3>
+                          <p>Am finalizat cursul <strong>Java Full-Stack Developer</strong> la Wantsome IT Learning Center (2025) și am obținut certificarea <strong>„Programator Ajutor” – ANC</strong>.
+                              În cadrul cursului am aprofundat Spring Boot, REST APIs, Flyway, Docker și bune practici de testare.</p>
+                      </div>
+                  </article>
+
+                  <!-- Business Administration -->
+                  <article class="card project">
+                      <img class="thumb" src="./assets/business-admin.jpg" alt="Licență Business Administration" />
+                      <div>
+                          <h3>Licențiat în Business Administration</h3>
+                          <p>Am absolvit programul de <strong>Business Administration</strong> la Universitatea „1 Decembrie 1918” din Alba Iulia (2024), cu o <strong>lucrare de licență pe tema „Studiu de caz: UiPath”</strong>,
+                              axată pe automatizare și impactul tehnologiei în mediul de afaceri.</p>
+                      </div>
+                  </article>
+
+                  <!-- Hackathon -->
+                  <article class="card project">
+                      <img class="thumb" src="./assets/hackathon.jpg" alt="Techsylvania Hackathon" />
+                      <div>
+                          <h3>Hackathon — Techsylvania 2025</h3>
+                          <p>Am participat la <strong>Techsylvania Hackathon (Cluj-Napoca, 2025)</strong>, unde am colaborat la dezvoltarea unui proiect inovator bazat pe <strong>Spring Boot</strong> și <strong>API design</strong>.
+                              Experiența mi-a oferit o perspectivă reală asupra muncii în echipă și a livrării rapide a soluțiilor funcționale.</p>
+                      </div>
+                  </article>
+
+
+              </div>
+          </section>
+
 
     <!-- GALLERY -->
     <section id="galerie">
