--- a/index.html
+++ b/index.html
@@ -181,139 +181,96 @@
       </div>
     </section>
 
-    <!-- PROIECTE -->
-    <section id="proiecte">
-      <h2>Proiecte</h2>
-      <div class="grid grid-3">
-        <!-- Project card 1 -->
-        <article class="card project">
-          <img class="thumb" src="./assets/task.png" alt="Tasky app preview" />
-          <div>
-            <h3>Tasky — Task Manager</h3>
-            <p>Aplicație full‑stack pentru managementul taskurilor: Spring Boot (API REST), React (UI), Docker Compose, Swagger.</p>
-            <div class="tags">
-              <span class="tag">Spring Boot</span>
-              <span class="tag">React</span>
-              <span class="tag">Docker</span>
-            </div>
+      <!-- PROIECTE -->
+      <section id="proiecte">
+          <h2>Proiecte</h2>
+          <div class="grid grid-3">
+              <!-- Project card 1 -->
+              <article class="card project">
+                  <img class="thumb" src="./assets/task.png" alt="Tasky app preview" />
+                  <div>
+                      <h3>Tasky — Task Manager</h3>
+                      <p>Aplicație full-stack pentru managementul taskurilor: Spring Boot (API REST), React (UI), Docker Compose, Swagger.</p>
+                      <div class="tags">
+                          <span class="tag">Spring Boot</span>
+                          <span class="tag">React</span>
+                          <span class="tag">Docker</span>
+                      </div>
+                  </div>
+                  <div style="display:flex; gap:10px; flex-wrap:wrap;">
+                      <a class="btn" href="https://github.com/IonGondrea/Tasky" target="_blank" rel="noreferrer">Cod sursă</a>
+                  </div>
+              </article>
+
+              <!-- Placeholder proiect 2 -->
+              <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px; position:relative;">
+                  <img class="thumb" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
+                  <div style="position:absolute; text-align:center;">
+                      <h3 style="font-size:1.4rem; margin-bottom:6px;">🚧 În curând</h3>
+                      <p style="color:#9fb0c0;">Un nou proiect backend este în dezvoltare</p>
+                  </div>
+              </article>
+
+              <!-- Placeholder proiect 3 -->
+              <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px; position:relative;">
+                  <img class="thumb" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
+                  <div style="position:absolute; text-align:center;">
+                      <h3 style="font-size:1.4rem; margin-bottom:6px;">🚀 Coming Soon</h3>
+                      <p style="color:#9fb0c0;">Proiectul este în lucru</p>
+                  </div>
+              </article>
           </div>
-          <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn" href="https://github.com/IonGondrea/Tasky" target="_blank" rel="noreferrer">Cod sursă</a>
+      </section>
+
+      <!-- REUȘITE — pe rând separat (full-width) -->
+      <section id="reu" class="section-wide">
+          <h2>Reușite</h2>
+          <div class="grid achievements-grid">
+              <!-- Curs Java -->
+              <article class="card project">
+                  <img class="thumb" src="./assets/diploma.png" alt="Certificat Java Wantsome"  height="1000" />
+                  <div>
+                      <h3>Certificare Java Full-Stack Developer</h3>
+                      <p>Am finalizat cursul <strong>Java Full-Stack Developer</strong> la Wantsome IT Learning Center (2025) și am obținut certificarea <strong>„Programator Ajutor” – ANC</strong>
+                  </div>
+              </article>
+
+              <!-- Business Administration -->
+              <article class="card project">
+                  <img class="thumb" src="./assets/univer.png" height="1300" alt="Licență Business Administration" />
+                  <div>
+                      <h3>Licențiat în Business Administration</h3>
+                      <p>Am absolvit programul de <strong>Business Administration</strong> la Universitatea „1 Decembrie 1918” din Alba Iulia (2024), cu o <strong>lucrare de licență pe tema „Provocările administrării unei afaceri din industria IT într-o economie globalizată" , „Studiu de caz: UiPath”</strong>,o companie globală de software care dezvoltă o platformă pentru automatizarea proceselor robotizate </p>
+                  </div>
+              </article>
+
+              <!-- Hackathon -->
+              <article class="card project">
+                  <img class="thumb" src="./assets/revo.png" width="960" height="960" alt="Techsylvania Hackathon" />
+                  <div>
+                      <h3>Hackathon — Techsylvania 2025</h3>
+                      <p>Am participat la <strong>Techsylvania Hackathon (Cluj-Napoca, 2025).</strong>Evenimentul mi-a oferit ocazia să învăț despre importanța comunicării, a organizării și a gândirii logice în realizarea unui produs tehnologic într-un timp limitat.
+                          În același timp, am descoperit numeroase concepte moderne legate de inteligența artificială, precum utilizarea modelelor de învățare automată, integrarea API-urilor bazate pe AI și impactul acestor tehnologii asupra procesului de dezvoltare software.
+                          Participarea la hackathon a reprezentat o experiență valoroasă care mi-a consolidat interesul pentru inovație, colaborare și aplicarea practică a cunoștințelor teoretice în domeniul IT.</p>
+                  </div>
+              </article>
           </div>
-        </article>
-          <!-- Project card 2 -->
-          <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px;">
-              <img class="thumb" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
-              <div style="position:absolute; text-align:center;">
-                  <h3 style="font-size:1.4rem; margin-bottom:6px;">🚧 În curând</h3>
-                  <p style="color:#9fb0c0;">Un nou proiect backend este în dezvoltare </p>
-              </div>
-          </article>
-
-          <!-- Project card 3 -->
-          <article class="card project" style="text-align:center; display:flex; flex-direction:column; justify-content:center; align-items:center; min-height:260px;">
-              <img class="thumb" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Coming soon" style="opacity:0.25; filter:blur(2px);">
-              <div style="position:absolute; text-align:center;">
-                  <h3 style="font-size:1.4rem; margin-bottom:6px;">🚀 Coming Soon</h3>
-                  <p style="color:#9fb0c0;">Proiectul este în lucru </p>
-              </div>
-          </article>
+      </section>
 
 
-          <!-- ACHIEVEMENTS -->
-          <!-- ACHIEVEMENTS -->
-          <section id="reu">
-              <h2>Reușite</h2>
-              <div class="grid grid-3">
-
-                  <!-- Curs Java -->
-                  <article class="card project">
-                      <img class="thumb" src="./assets/java-certificat.jpg" alt="Certificat Java Wantsome" />
-                      <div>
-                          <h3>Certificare Java Full-Stack Developer</h3>
-                          <p>Am finalizat cursul <strong>Java Full-Stack Developer</strong> la Wantsome IT Learning Center (2025) și am obținut certificarea <strong>„Programator Ajutor” – ANC</strong>.
-                              În cadrul cursului am aprofundat Spring Boot, REST APIs, Flyway, Docker și bune practici de testare.</p>
-                      </div>
-                  </article>
-
-                  <!-- Business Administration -->
-                  <article class="card project">
-                      <img class="thumb" src="./assets/business-admin.jpg" alt="Licență Business Administration" />
-                      <div>
-                          <h3>Licențiat în Business Administration</h3>
-                          <p>Am absolvit programul de <strong>Business Administration</strong> la Universitatea „1 Decembrie 1918” din Alba Iulia (2024), cu o <strong>lucrare de licență pe tema „Studiu de caz: UiPath”</strong>,
-                              axată pe automatizare și impactul tehnologiei în mediul de afaceri.</p>
-                      </div>
-                  </article>
-
-                  <!-- Hackathon -->
-                  <article class="card project">
-                      <img class="thumb" src="./assets/hackathon.jpg" alt="Techsylvania Hackathon" />
-                      <div>
-                          <h3>Hackathon — Techsylvania 2025</h3>
-                          <p>Am participat la <strong>Techsylvania Hackathon (Cluj-Napoca, 2025)</strong>, unde am colaborat la dezvoltarea unui proiect inovator bazat pe <strong>Spring Boot</strong> și <strong>API design</strong>.
-                              Experiența mi-a oferit o perspectivă reală asupra muncii în echipă și a livrării rapide a soluțiilor funcționale.</p>
-                      </div>
-                  </article>
-
-
+      <div class="grid grid-2 sections-duo">
+              <section id="galerie">
+              <h2>Galerie</h2>
+              <div class="gallery">
+                  <img src="./assets/foto1.png" alt="foto" />
+                  <img src="./assets/foto2.png" alt="Proiect" />
+                  <img src="./assets/foto3.png" alt="Workshop" />
+                  <img src="./assets/foto4.png" alt="Team" />
+                  <img src="./assets/foto5.png" alt="UI" />
+                  <img src="./assets/foto6.png" alt="Coding" />
               </div>
           </section>
-
-
-    <!-- GALLERY -->
-    <section id="galerie">
-      <h2>Galerie</h2>
-      <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?q=80&w=800&auto=format&fit=crop" alt="Certificat" />
-        <img src="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=800&auto=format&fit=crop" alt="Proiect" />
-        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=800&auto=format&fit=crop" alt="Workshop" />
-        <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?q=80&w=800&auto=format&fit=crop" alt="Team" />
-        <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?q=80&w=800&auto=format&fit=crop" alt="UI" />
-        <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=800&auto=format&fit=crop" alt="Coding" />
       </div>
-    </section>
+              </main>
 
-    <!-- CONTACT -->
-    <section id="contact">
-      <h2>Contact</h2>
-      <form onsubmit="return submitForm(event)">
-        <div class="grid grid-2">
-          <div>
-            <label for="nume">Nume</label>
-            <input id="nume" name="nume" placeholder="Numele tău" required>
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="adresa@exemplu.com" required>
-          </div>
-        </div>
-        <div>
-          <label for="mesaj">Mesaj</label>
-          <textarea id="mesaj" name="mesaj" rows="5" placeholder="Salut, Ion! Aș vrea să discutăm despre…" required></textarea>
-        </div>
-        <div>
-          <button class="btn" type="submit">Trimite</button>
-        </div>
-      </form>
-    </section>
-  </main>
 
-  <footer>
-    <div class="container">© <span id="year"></span> Ion Gondrea · <a href="https://www.linkedin.com" target="_blank" rel="noreferrer">LinkedIn</a> · <a href="https://github.com/IonGondrea" target="_blank" rel="noreferrer">GitHub</a></div>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    function submitForm(e){
-      e.preventDefault();
-      const params = new URLSearchParams({
-        subject: 'Contact portofoliu',
-        body: `Nume: ${document.getElementById('nume').value}\nEmail: ${document.getElementById('email').value}\n\n${document.getElementById('mesaj').value}`
-      });
-      window.location.href = `mailto:ion.gondrea@example.com?${params.toString()}`;
-      return false;
-    }
-  </script>
-</body>
-</html>
